--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="community_parade"
+        android:label="Parade"
         android:icon="@mipmap/ic_launcher">
     <activity
             android:name=".MainActivity"
