--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,19 +13,24 @@ analyzer:
 dependencies:
   flutter:
     sdk: flutter
+  auto_size_text: ^2.1.0
   encrypt: ^4.0.0
+  firebase: ^7.3.0
   firebase_auth: ^0.16.0
   firebase_core: ^0.4.4+3
-  firebase_database: ^3.1.3 
+  firebase_database: ^3.1.5
   flutter_map: ^0.9.0
-  flutter_qr_bar_scanner: ^1.0.1
   flutter_secure_storage: ^3.3.3
   geolocator: ^5.3.1
   logging: ^0.11.4
   pointycastle: ^1.0.1
   provider: ^4.0.5
   rest_client: any
-  sqflite: ^1.3.0
+  sembast: ^2.4.3
+  sembast_web: ^1.1.0
+  websafe_network_image: any
+  websafe_platform: any
+  websafe_svg: any
 
 dev_dependencies:
   flutter_test:
