--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,23 +14,27 @@ dependencies:
   flutter:
     sdk: flutter
   auto_size_text: ^2.1.0
+  debounce_throttle: ^1.1.0
   encrypt: ^4.0.0
   firebase: ^7.3.0
   firebase_auth: ^0.16.0
   firebase_core: ^0.4.4+3
   firebase_database: ^3.1.5
+  flutter_icons: ^1.1.0
   flutter_map: ^0.9.0
   flutter_secure_storage: ^3.3.3
   geolocator: ^5.3.1
+  location: ^3.0.2
   logging: ^0.11.4
   pointycastle: ^1.0.1
   provider: ^4.0.5
-  rest_client: any
+  qr_flutter: ^3.2.0
+  rest_client: ^1.0.2
   sembast: ^2.4.3
   sembast_web: ^1.1.0
+  wakelock: ^0.1.4+1
   websafe_network_image: any
   websafe_platform: any
-  websafe_svg: any
 
 dev_dependencies:
   flutter_test:
